--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -135,14 +135,15 @@
           font-size $font-size-medium
           padding 12px
           line-height ($sched-nav-mobile-height - ($font-size-large - $font-size-medium))
+          margin-left -5px
           span
             margin 0 0 0 5px
           .stico-arrow-right
             vertical-align middle
 
         .group-name
-          font-weight 400
-          font-size $font-size-large
+          font-weight 500
+          font-size $font-size-medium
 
         // Change schedule type
         .type-changer
