--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -134,6 +134,7 @@
         margin 45px 0 30px 0
         font-size $font-size-large
         text-align: center
+        white-space nowrap
 
         .lesson-cell-title-day
           text-align: center
