--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -55,6 +55,8 @@
             border 1px solid lighten($brand-info, 80%)
             border-radius $line-height-computed
             height $sched-nav-height
+            position relative
+            z-index 10000
             a
               display inline-block
               font-size $font-size-base
