--- a/app/index.jade
+++ b/app/index.jade
@@ -19,7 +19,7 @@ html(ng-app="app")
     //if lte IE 8
       script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 
-
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic', rel='stylesheet', type='text/css')
     link(rel="stylesheet", href="/css/app.css")
     script.
       window.brunch = window.brunch || {};
