--- a/app/styles/common/open-sans-font.styl
+++ b/app/styles/common/open-sans-font.styl
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -16,3 +17,4 @@
   font-weight: 600;
   src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/open-sans-600.woff) format('woff');
 }
+*/
