--- a/app/styles/common/open-sans-font.styl
+++ b/app/styles/common/open-sans-font.styl
@@ -1,20 +1,1 @@
-/*
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/open-sans-300.woff) format('woff');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(../fonts/open-sans-400.woff) format('woff');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/open-sans-600.woff) format('woff');
-}
-*/
+// Moved to index.jade as link to Google Fonts
