minor style fixes, new logo

--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -33,13 +33,15 @@ header
 
     nav
       .navbar-brand
+        padding-left 10px
+        padding-right 10px
         span
           display none
 
       ul.nav
         margin 0
         position absolute
-        left 67px
+        left 57px
         right 0
         top 0
         li
