--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -55,7 +55,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                                     .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
                                     class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                                     ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                        span.lesson-name {{atom.subject.name | shortest}}
+                                        span.lesson-name {{atom.subject.name}}
                                         span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
                             div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
@@ -97,7 +97,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                             ng-repeat="atom in sched[dow][class]",
                             class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                             ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                span.lesson-name {{atom.subject.name | shortest}}
+                                span.lesson-name {{atom.subject.name}}
                                 span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
                             div(ng-include, src="'app/partials/schedules/class/regular-index.jade'")
