added global request canceler for major parts of interface

--- a/app/partials/courses/index.jade
+++ b/app/partials/courses/index.jade
@@ -1,6 +1,5 @@
 .overthrow.non-bounce
     .animated-view
         .schedule-header
-            .container Верхняя панелька
-
-        .container Список спецкурсов
+            .container
+                span.under-dev В разработке
