--- a/app/partials/places/index.jade
+++ b/app/partials/places/index.jade
@@ -1,6 +1,6 @@
 .overthrow.non-bounce
     .animated-view
         .schedule-header
-            .container Верхняя панелька
-
-            div(ng-include, src="'app/partials/places/schedule.jade'")
+            .container
+                span.under-dev В разработке
+            //div(ng-include, src="'app/partials/places/schedule.jade'")
