--- a/app/styles/common/layout.styl
+++ b/app/styles/common/layout.styl
@@ -19,7 +19,7 @@ a
 .loading-container
   font-size $font-size-large
   text-align center
-  padding 20px
+  padding 50px 0
   font-weight 300
   color lighten($brand-primary, 70%)
   position absolute
@@ -50,6 +50,11 @@ a
 
 .rotate-180
   rotate(180deg)
+
+.under-dev
+  color lighten($text-color, 50%)
+  font-weight 300
+  font-size $font-size-medium
 
 label.select
   position relative
