--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -93,9 +93,14 @@
     .lesson-info-files
       .no-attachments
         font-size $font-size-medium
-        opacity 0.4
         font-weight 300
         padding 10px 0
+        color lighten($brand-primary, 70%)
+        -webkit-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+        -moz-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+        -ms-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+        -o-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+        animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
 
       // Navigation
       .lesson-info-files-header
@@ -220,8 +225,13 @@
 
       .no-attachments
           font-size $font-size-medium
-          opacity 0.4
+          color lighten($brand-primary, 70%)
           font-weight 300
+          -webkit-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+          -moz-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+          -ms-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+          -o-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+          animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
 
       // Navigation
       .lesson-info-files-header
