--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -5,6 +5,11 @@
   .tests-and-exams
     font-size $font-size-medium
 
+    .no-exams
+      font-weight 300
+      color lighten($text-color, 50%)
+      text-align center
+
     .session-part
       h2
         font-size $font-size-medium
@@ -60,6 +65,12 @@
 @media $media-min-tablet
   .tests-and-exams
     font-size $font-size-medium
+
+    .no-exams
+      padding 25px 0
+      font-weight 300
+      color lighten($text-color, 50%)
+      text-align center
 
     .session-part
       h2
