--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -9,9 +9,10 @@ header
     border 0 !important
     .navbar-brand
       cursor default
+      padding 2px
       white-space nowrap
       span
-        line-height ($navbar-height / 1.4)
+        line-height ($navbar-height / 1.6)
         margin-left 10px
     ul.nav
       background $brand-info-bg
@@ -33,7 +34,7 @@ header
 
     nav
       .navbar-brand
-        padding-left 10px
+        padding-left 6px
         padding-right 10px
         span
           display none
