fixed logog and some mobile styles

--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -11,9 +11,10 @@ header
       cursor default
       padding 2px
       white-space nowrap
+
       span
-        line-height ($navbar-height / 1.6)
         margin-left 10px
+        vertical-align middle
     ul.nav
       background $brand-info-bg
 
