--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -271,6 +271,6 @@
       > :first-child + div.lesson-row
         border-top: 1px solid $sched-border-color
 
-    > :first-child + div.lessons-mobile
-      .lesson-cell-title
-        margin-top 25px
+      &:first-child
+        .lesson-cell-title
+          margin-top 25px
