--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -310,6 +310,7 @@
         margin 10px 0 0 1px
 
         .upload-info-form
+          white-space nowrap
           input
             margin-bottom 5px
           .upload-info
@@ -335,7 +336,9 @@
             .file-size
               font-weight 500
               margin-left 15px
+              white-space nowrap
             .file-date
+              white-space nowrap
               margin-left 15px
               font-weight 200
               opacity 0.3
