--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -96,11 +96,6 @@
         font-weight 300
         padding 10px 0
         color lighten($brand-primary, 70%)
-        -webkit-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-        -moz-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-        -ms-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-        -o-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-        animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
 
       // Navigation
       .lesson-info-files-header
@@ -227,11 +222,7 @@
           font-size $font-size-medium
           color lighten($brand-primary, 70%)
           font-weight 300
-          -webkit-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-          -moz-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-          -ms-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-          -o-animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
-          animation: fadeInLong 1.5s cubic-bezier(1, .04, .54, 1);
+          margin 10px 0 0 0
 
       // Navigation
       .lesson-info-files-header
