logo styles fixed

--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -11,10 +11,13 @@ header
       cursor default
       padding 2px
       white-space nowrap
-
+      div
+        float left
+        vertical-align inherit
       span
         margin-left 10px
-        vertical-align middle
+        line-height $navbar-height
+
     ul.nav
       background $brand-info-bg
 
