--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -97,6 +97,9 @@
         padding 10px 0
         color lighten($brand-primary, 70%)
 
+      .loading-attachments
+        display none
+
       // Navigation
       .lesson-info-files-header
         .att-label
@@ -224,6 +227,14 @@
           font-weight 300
           margin 10px 0 0 0
 
+      .loading-attachments
+        margin-left 20px
+        margin-top 3px
+        vertical-align middle
+        display inline-block
+        color lighten($brand-primary, 50%)
+        font-weight 300
+
       // Navigation
       .lesson-info-files-header
         .att-label
@@ -284,7 +295,7 @@
 
           .add-btn
             display inline-block
-            margin-top 5px
+            margin-top 3px
             padding 0 5px
             margin-left 10px
             vertical-align middle
