fixed links to social networks

--- a/app/partials/footer.jade
+++ b/app/partials/footer.jade
@@ -2,9 +2,9 @@ footer.footer.ng-cloak(bindonce)
     .container
         .row
             .widgets.col-md-3.col-xs-6
-                a(href='#').widget.widget-twitter
+                a(href='https://twitter.com/StudyTimeMe', target="_blank").widget.widget-twitter
                     i.stico-twitter
-                a(href='#').widget.widget-vk
+                a(href='http://vk.com/study_time_me', target="_blank").widget.widget-vk
                     i.stico-vk
                 a(href='#').widget.widget-facebook
                     i.stico-fb
