--- a/app/index.jade
+++ b/app/index.jade
@@ -36,3 +36,9 @@ html(ng-app="app")
     script(type='text/javascript', src='/js/partials.js')
     script(type='text/javascript', src='/js/app.js')
 
+    // Google Analytics
+    script.
+        var _gaq=[['_setAccount','UA-39486394-1'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=('https:'==location.protocul?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
