word braking on mobile devices in class details

--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -122,9 +122,11 @@
           .file-header
             font-size $font-size-medium
             .file-name
+              word-break break-all
               display block
               text-decoration underline
           .file-descr
+            word-break break-all
             font-size $font-size-base
             font-weight 300
             color lighten($brand-primary, 40%)
