word braking on mobile devices in class details

--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -114,6 +114,7 @@
           display block
           padding 10px 0px
           border-bottom 1px solid #fff
+          overflow hidden
           &:last-child
             border-bottom none
           &:hover
@@ -122,11 +123,9 @@
           .file-header
             font-size $font-size-medium
             .file-name
-              word-break break-all
               display block
               text-decoration underline
           .file-descr
-            word-break break-all
             font-size $font-size-base
             font-weight 300
             color lighten($brand-primary, 40%)
