ipad standalone mode fixed

--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -43,6 +43,11 @@ footer
     ul
       margin 0
 
+// iPad
+.standalone
+  footer
+    display none
+
 @media $media-max-phone
   footer
     display none
