--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -31,6 +31,17 @@ header
       -o-animation: spin s infinite linear;
       animation: spin 2s infinite linear;
 
+// iPad/iPhone standalone header
+.standalone
+  .header
+    padding 0
+    position absolute
+    top 0
+    left 0
+    right 0
+    opacity 0.85
+    z-index 100000
+
 // iOS like navigation on mobile
 @media $media-max-phone
   header
