--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -41,6 +41,8 @@ header
     right 0
     opacity 0.85
     z-index 100000
+    .navbar-brand
+       padding 0
 
 // iOS like navigation on mobile
 @media $media-max-phone
