--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -31,6 +31,7 @@ header
       -o-animation: spin s infinite linear;
       animation: spin 2s infinite linear;
 
+
 // iPad/iPhone standalone header
 .standalone
   .header
@@ -41,8 +42,9 @@ header
     right 0
     opacity 0.85
     z-index 100000
+  @media $media-min-tablet
     .navbar-brand
-       padding 0
+      padding 0
 
 // iOS like navigation on mobile
 @media $media-max-phone
