left-right border returned

--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -50,6 +50,8 @@
         .lesson-cell
           position relative
           border-bottom: 1px solid $sched-border-color
+          border-left: 1px solid $sched-border-color
+          border-right: 1px solid $sched-border-color
           overflow: hidden
           height: 64px
           text-align center
