--- a/app/partials/schedules/editor.jade
+++ b/app/partials/schedules/editor.jade
@@ -39,7 +39,7 @@
                         div(ng-include, src="'app/partials/common/default-typeahead.jade'")
                 .col-xs-3.form-group
                     label.sr-only(for="dowInput") День недели
-                    select#dowInput.form-control(ng-model="values.event.dow", ng-options="t[0] as t[1] for t in [['Mon', 'Понедельник'], ['Tue', 'Вторник'], ['Wed', 'Среда'], ['Thu','Четверг'], ['Fri','Пятница'], ['Sun','Суббота']]")
+                    select#dowInput.form-control(ng-model="values.event.dow", ng-options="t[0] as t[1] for t in [['Mon', 'Понедельник'], ['Tue', 'Вторник'], ['Wed', 'Среда'], ['Thu','Четверг'], ['Fri','Пятница'], ['Sun','Суббота'], ['Sat','Воскресенье']]")
                         option(value="") -- День недели --
 
                 .col-xs-3.form-group
@@ -61,9 +61,10 @@
 
                 .col-xs-3.form-group
                     label.sr-only(for="startDateInput") Дата начала
-                    datepicker(ng-model='values.event.activity.start', id="startDateInput", placeholder="Дата начала")
+                    input.form-control(type="text", date-time="", ng-model="values.event.activity.start", view="date", placeholder="Дата начала")
                 .col-xs-3.form-group
                     label.sr-only(for="endDateInput") Дата конца
+                    input.form-control(type="text", date-time="", ng-model="values.event.activity.end", view="date", placeholder="Дата конца")
                     datepicker(ng-model='values.event.activity.end', id="endDateInput", placeholder="Дата конца")
 
             .row
